--- a/WebApplication8/Views/Libros/Eliminar.cshtml
+++ b/WebApplication8/Views/Libros/Eliminar.cshtml
@@ -16,7 +16,7 @@
         <div class="container" style="padding:30px">
             <div class="form-group">
                 <label asp-for="LibroName" class="form-label">Titulo</label>
-                <input asp-for="LibroName" class="form-control" type="text" />
+                <input asp-for="LibroName" class="form-control" type="text" disabled/>
                 <span asp-validation-for="LibroName" class="text-danger" />
             </div>
         </div>
