--- a/WebApplication8/Views/Shared/_Layout.cshtml
+++ b/WebApplication8/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Libros" asp-action="Index">Libros</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Acceso" asp-action="Salir">LogOut</a>
+                        </li>
                     </ul>
                 </div>
             </div>
